@@ -6,6 +6,7 @@ http://svn.collab.net/repos/svn/tags/1.6.0
   - Major new features:
 
   - Minor new features and improvements:
+    * pre-lock hook can now specify lock tokens via stdout (r32778)
 
   - Client-side bugfixes:
 
